--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,16 @@ jobs:
           path: ./mod_crucibe
 
       - id: crucible
-        uses: pozetroninc/github-action-get-latest-release@2b51d48e904071035d6632715d41966f516711dd
+        name: Fetch Latest Release
+        # You may pin to the exact commit or the version.
+        # uses: thebritican/fetch-latest-release@a36ee8ee464da77ba3e499ed6b75e3530e10f9bc
+        uses: thebritican/fetch-latest-release@v2.0.0
         with:
-          owner: sei-mmcdonough
-          repo: moodle-mod_crucible
-          excludes: prerelease, draft
+          # A Github token for the repo, usually `{{ github.token }}`.
+          github_token: # optional, default is ${{ github.token }}
+          # Provide a "owner/repo" string for fetching from a different repo.
+          repo_path: # optional
           
       - name: package
         run: |
-          echo $steps.crucible.outputs.release
+          echo $steps.crucible.outputs.name
