--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,13 @@ jobs:
         with:
           path: ./mod_crucibe
 
-      - id: crucible
-        name: Fetch Latest Release
-        # You may pin to the exact commit or the version.
-        # uses: thebritican/fetch-latest-release@a36ee8ee464da77ba3e499ed6b75e3530e10f9bc
-        uses: thebritican/fetch-latest-release@v2.0.0
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          # A Github token for the repo, usually `{{ github.token }}`.
-          github_token: ${{ github.token }}
-          # Provide a "owner/repo" string for fetching from a different repo.
-          repo_path: # optional
-          
-      - name: package
-        run: |
-          echo $steps.crucible.outputs.name
+          tag_name: 2020101201 #${{ env.artifact_version }}
+          release_name: mod_crucible_2020101201 #${{ env.artifact_name }}
+          draft: false
+          prerelease: false
