--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,13 @@ jobs:
         with:
           path: ./mod_crucibe
 
+      - id: crucible
+        uses: pozetroninc/github-action-get-latest-release@v0.5.0
+        with:
+          owner: sei-mmcdonough
+          repo: moodle-mod_crucible
+          excludes: prerelease, draft
+          
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
