--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,21 +24,7 @@ jobs:
       - name: package
         run: |
           OLDVERSION=${{ steps.crucible.outputs.release }}
-          OLDDATE=`echo $OLDVERSION | cut -b 1-8`
-          NEWDATE=`date +%Y%m%d`
-          if [ $OLDDATE -ne $NEWDATE ]; then
-              NEWVERSION=$NEWDATE\01
-          else
-              OLDVERS=`echo $OLDVERSION | cut -b 9-10`
-              OLDVERS=${OLDVERS#0}
-              let NEWVERS=(OLDVERS + 1)
-              NEWVERSION=$OLDDATE`printf %02d $NEWVERS`
-          fi
-          PREVIOUSVERSION=$(grep "plugin->version" crucible/version.php | sed -e "s/.*= \(.*\);.*/\1/")
-          sed -i "s#$PREVIOUSVERSION#$NEWVERSION#" crucible/version.php
-          zip -r mod_crucible_$NEWVERSION.zip crucible/ -x  "crucible/*.git*" -x "crucible/node_modules/\*
-          echo ::set-env name=artifact_version::$NEWVERSION
-          echo ::set-env name=artifact_name::mod_groupquiz_$NEWVERSION
+          
       
       - name: Create Release
         id: create_release
@@ -46,7 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.artifact_version }}
-          release_name: ${{ env.artifact_name }}
+          tag_name: 2020101301 #${{ env.artifact_version }}
+          release_name: mod_crucible_2020101301 #${{ env.artifact_name }}
           draft: false
           prerelease: false
