--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,17 @@ jobs:
       - name: package
         run: |
           OLDVERSION=${{ steps.crucible.outputs.release }}
-          OLDDATE=`echo $OLDVERSION | cut -b 1-8`          
+          OLDDATE=`echo $OLDVERSION | cut -b 1-8`
+          NEWDATE=`date +%Y%m%d`
+          if [ $OLDDATE -ne $NEWDATE ]; then
+              NEWVERSION=$NEWDATE\01
+          else
+              OLDVERS=`echo $OLDVERSION | cut -b 9-10`
+              OLDVERS=${OLDVERS#0}
+              let NEWVERS=(OLDVERS + 1)
+              NEWVERSION=$OLDDATE`printf %02d $NEWVERS`
+          fi
+          echo $NEWVERSION          
       
       - name: Create Release
         id: create_release
