--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,14 @@ jobs:
           release_name: ${{ env.artifact_name }}
           draft: false
           prerelease: false
+    
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          asset_path: ./${{env.artifact_name}}.zip
+          asset_name: ${{env.artifact_name}}.zip
+          asset_content_type: application/zip
