--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           sed -i "s#$PREVIOUSVERSION#$NEWVERSION#" crucible/version.php
           zip -r mod_crucible_$NEWVERSION.zip crucible/ -x  "crucible/*.git*" -x "crucible/node_modules/\*"
           echo ::set-env name=artifact_version::$NEWVERSION
-          echo ::set-env name=artifact_name::mod_groupquiz_$NEWVERSION
+          echo ::set-env name=artifact_name::mod_crucible_$NEWVERSION
       
       - name: Create Release
         id: create_release
@@ -51,13 +51,10 @@ jobs:
           draft: false
           prerelease: false
     
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload a Release Asset
+        uses: actions/upload-release-asset@v1.0.2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./${{env.artifact_name}}.zip
           asset_name: ${{env.artifact_name}}.zip
           asset_content_type: application/zip
