--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -17,7 +15,7 @@ jobs:
       - id: crucible
         uses: pozetroninc/github-action-get-latest-release@v0.5.0
         with:
-          owner: sei-mmcdonough
+          owner: cmu-sei
           repo: moodle-mod_crucible
           excludes: prerelease, draft
         
