update github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
           PREVIOUSVERSION=$(grep "plugin->version" crucible/version.php | sed -e "s/.*= \(.*\);.*/\1/")
           sed -i "s#$PREVIOUSVERSION#$NEWVERSION#" crucible/version.php
           zip -r mod_crucible_$NEWVERSION.zip crucible/ -x  "crucible/*.git*" -x "crucible/node_modules/\*"
-          echo ::set-env name=artifact_version::$NEWVERSION
-          echo ::set-env name=artifact_name::mod_crucible_$NEWVERSION
+          echo "artifact_version=$NEWVERSION" >> $GITHUB_ENV
+          echo "artifact_name=mod_crucible_$NEWVERSION" >> $GITHUB_ENV
       
       - name: Create Release
         id: create_release
